assets/theme-type.css
:root {
  --ratio-typography: 1.2;

  --t-3: calc(var(--t-2) / var(--ratio-typography));
  --t-2: calc(var(--t-1) / var(--ratio-typography));
  --t-1: calc(var(--t0) / var(--ratio-typography));
  --t0: 1rem;
  --t1: calc(var(--t0) * var(--ratio-typography));
  --t2: calc(var(--t1) * var(--ratio-typography));
  --t3: calc(var(--t2) * var(--ratio-typography));
  --t4: calc(var(--t3) * var(--ratio-typography));
  --t5: calc(var(--t4) * var(--ratio-typography));
  --t6: calc(var(--t5) * var(--ratio-typography));
  --t7: calc(var(--t6) * var(--ratio-typography));
  --t8: calc(var(--t7) * var(--ratio-typography));
  --t9: calc(var(--t8) * var(--ratio-typography));
  --t10: calc(var(--t9) * var(--ratio-typography));
  --t11: calc(var(--t10) * var(--ratio-typography));
  --t12: calc(var(--t11) * var(--ratio-typography));
}

.landing-text {
  overflow-wrap: normal;
  word-break: normal;
}

.landing-text h1,
.landing-text h2,
.landing-text h3,
.landing-text h4,
.landing-text h5,
.landing-text h6,
.landing-text p,
.landing-text ol,
.landing-text ul {
  margin: 0;
  font-size: inherit;
  overflow-wrap: norma;
  word-break: keep-all;
}

.landing-text h1 {
  letter-spacing: 0;
}

p {
  line-height: 130%;
  letter-spacing: 0.6px;
}


.size--1 {
  font-size: var(--t-1);
}

.size-0 {
  font-size: var(--t0);
}

.size-1 {
  font-size: var(--t1);
}

.size-2 {
  font-size: var(--t2);
}

.size-3 {
  font-size: var(--t3);
}

.size-4 {
  font-size: var(--t4);
}

.size-5 {
  font-size: var(--t5);
}

.size-6 {
  font-size: var(--t6);
}

.size-7 {
  font-size: var(--t7);
}

.size-8 {
  font-size: var(--t8);
}

.size-9 {
  font-size: var(--t9);
}

.size-10 {
  font-size: var(--t10);
}

.size-11 {
  font-size: var(--t11);
}

.size-12 {
  font-size: var(--t12);
}

@media (max-width: 767px) {
  .small--size--1 {
    font-size: var(--t-1);
  }

  .small--size-0 {
    font-size: var(--t0);
  }

  .small--size-1 {
    font-size: var(--t1);
  }

  .small--size-2 {
    font-size: var(--t2);
  }

  .small--size-3 {
    font-size: var(--t3);
  }

  .small--size-4 {
    font-size: var(--t4);
  }

  .small--size-5 {
    font-size: var(--t5);
  }

  .small--size-6 {
    font-size: var(--t6);
  }

  .small--size-7 {
    font-size: var(--t7);
  }

  .small--size-8 {
    font-size: var(--t8);
  }

  .small--size-9 {
    font-size: var(--t9);
  }

  .small--size-10 {
    font-size: var(--t10);
  }

  .small--size-11 {
    font-size: var(--t11);
  }

  .small--size-12 {
    font-size: var(--t12);
  }
}



.text--left {
  text-align: left;
}

.text--center {
  text-align: center;
}

.text--center > * {
  text-align: center;
  margin-right: auto;
  margin-left: auto;
}

.text--right {
  text-align: right;
}

.text--right > * {
  margin-left: auto;
}

@media (max-width: 767px) {
  .small--text--left {
    text-align: left;
  }

  .small--text--center {
    text-align: center;
  }

  .small--text--center > * {
    text-align: center;
    margin-right: auto;
    margin-left: auto;
  }

  .small--text--right {
    text-align: right;
  }

  .small--text--right > * {
    margin-left: auto;
  }
}


.landing-kicker {
  display: flex;
  gap: var(--s0);
  align-items: center;
  justify-content: center;
  font-size: 15px;
  font-weight: 700;
  text-transform: uppercase;
}

.landing-kicker p {
  position: relative;
  top: 1px;
}

@media (max-width: 960px) {
  .landing-kicker {
    font-size: 13px;
  }
}


.landing-heading,
.featured-reviews__header {
  text-transform: none;
  font-family: "Forma";
  font-weight: 400;
  line-height: 120%;
  font-size: var(--t7) !important;
}

@media (max-width: 960px) {
  .landing-heading,
  .featured-reviews__header {
    font-size: var(--t6) !important;
  }
}

